# openweather

./: LICENSE  README.md  favorite_locations.json  main.py  pyproject.toml
