[project]
name = "openweather"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.47.1,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "datetime (>=5.5,<6.0)",
    "folium (>=0.20.0,<0.21.0)",
    "streamlit-folium (>=0.25.0,<0.26.0)",
    "mynode (>=1.1,<2.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "plotly (>=6.2.0,<7.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false